<resources>
    <string name="app_name">RUPizza</string>
    <string name="defaultvalue">default</string>
    <string name="small">small</string>
    <string name="large">large</string>
    <string name="modium">modium</string>
    <string name="topping">Topping:</string>
    <string name="souce">Souce:</string>
    <string name="extra_sauce">extra sauce</string>
    <string name="extra_chesse"> extra chesse</string>
    <string name="money_symbol">$</string>
    <string name="add_to_order">Add to order</string>
    <string name="tips_confirm_order">Do you confirm order？</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="remove_pizza">Remove Pizza</string>
    <string name="place_order">Place Order</string>
    <string name="specialty_pizzas">SpecialtyPizzas</string>
    <string name="build_your_own">BuildYourOwn</string>
    <string name="current_order">CurrentOrder</string>
    <string name="store_order">StoreOrder</string>


</resources>