<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BuildYourOwnActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/iv_img"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_gravity="center"
                    android:src="@drawable/specialty_pizzas"
                    android:scaleType="centerCrop">

                </ImageView>
                <TextView
                    android:id="@+id/pizzas_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18dp"
                    android:text="@string/defaultvalue">

                </TextView>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18dp"
                        android:text="@string/topping" />
                    <LinearLayout
                        android:id="@+id/ll_topping"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        >
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="20sp"
                            android:gravity="center"
                            android:textColor="@color/black"
                            android:layout_margin="1dp"
                            android:text="@string/defaultvalue"
                            android:background="@drawable/rounded_corner"
                            />
                    </LinearLayout>
                </LinearLayout>

                <RadioGroup
                    android:id="@+id/rg_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >
                    <RadioGroup
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                    </RadioGroup>
                    <RadioButton
                        android:id="@+id/rb_size_small"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/small"
                        android:checked="true"
                        >

                    </RadioButton>
                    <RadioButton
                        android:id="@+id/rb_size_modium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/modium">
                    </RadioButton>
                    <RadioButton
                        android:id="@+id/rb_size_large"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/large">
                    </RadioButton>

                </RadioGroup>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18dp"
                        android:text="@string/souce" />
                    <Spinner
                        android:id="@+id/spinner_souce"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >

                    <CheckBox
                        android:id="@+id/cb_extra_sauce"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/extra_sauce"
                        >

                    </CheckBox>
                    <CheckBox
                        android:id="@+id/cb_extra_chesse"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/extra_chesse">

                    </CheckBox>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:gravity="center"
            android:text="@string/money_symbol"
            android:textColor="@color/red"
            android:textSize="20dp"
            >

        </TextView>
        <TextView
            android:id="@+id/tv_price"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:gravity="center"
            android:text="@string/defaultvalue"
            android:textColor="@color/red"
            android:textSize="20dp"
            >

        </TextView>
        <Button
            android:id="@+id/bt_add_to_order"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:text="@string/add_to_order"
            >

        </Button>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>