<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical"
      >
      <RelativeLayout
          android:id="@+id/rl_specialty_pizzas"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_margin="10dp"

          >
          <LinearLayout
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_centerHorizontal="true"
              android:orientation="vertical">
              <ImageView
                  android:layout_width="100dp"
                  android:layout_height="100dp"
                  android:src="@drawable/specialty_pizzas"
                  android:scaleType="centerCrop"
                  >

              </ImageView>
              <TextView
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_gravity="center"
                  android:text="@string/specialty_pizzas">

              </TextView>
          </LinearLayout>

      </RelativeLayout>
      <RelativeLayout
          android:id="@+id/rl_build_your_own"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_margin="10dp"

          >
          <LinearLayout
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_centerHorizontal="true"
              android:orientation="vertical">
          <ImageView
              android:layout_width="100dp"
              android:layout_height="100dp"
              android:src="@drawable/build_your_own"
              android:scaleType="centerCrop"
              android:layout_centerHorizontal="true"
              >

          </ImageView>
              <TextView
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_gravity="center"
                  android:text="@string/build_your_own">

              </TextView>
          </LinearLayout>
      </RelativeLayout>
      <RelativeLayout
          android:id="@+id/rl_current_order"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_margin="10dp"

          >
          <LinearLayout
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_centerHorizontal="true"
              android:orientation="vertical">
          <ImageView
              android:layout_width="100dp"
              android:layout_height="100dp"
              android:src="@drawable/current_order"
              android:scaleType="centerCrop"
              android:layout_centerHorizontal="true"
              >          </ImageView>

              <TextView
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_gravity="center"
                  android:text="@string/current_order">

              </TextView>
          </LinearLayout>
      </RelativeLayout>
      <RelativeLayout
          android:id="@+id/rl_store_order"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_margin="10dp"

          >
          <LinearLayout
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_centerHorizontal="true"
              android:orientation="vertical">
          <ImageView
              android:layout_width="100dp"
              android:layout_height="100dp"
              android:src="@drawable/store_order"
              android:scaleType="centerCrop"
              android:layout_centerHorizontal="true"
              >

          </ImageView>
              <TextView
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_gravity="center"
                  android:text="@string/store_order">

              </TextView>
          </LinearLayout>
      </RelativeLayout>
  </LinearLayout>
</ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>